crates/orator-axum-codegen/tests/snapshots/codegen_axum__module_types.snap
---
source: crates/orator-axum-codegen/tests/codegen_axum.rs
expression: module.types
---
// Generated by orator v0.2.2
// Do not edit manually.
// Tennis Club API | v0.1.0

#![allow(dead_code, unused_imports)]
use orator_axum::serde;
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(tag = "booking_type")]
pub enum Booking {
    #[serde(rename = "member")]
    MemberBooking(MemberBooking),
    #[serde(rename = "guest")]
    GuestBooking(GuestBooking),
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct Court {
    pub id: orator_axum::uuid::Uuid,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub indoor: Option<bool>,
    pub name: String,
    pub surface: Surface,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct Error {
    pub code: i32,
    pub message: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct GuestBooking {
    pub booking_type: String,
    pub court_id: orator_axum::uuid::Uuid,
    pub date: orator_axum::chrono::NaiveDate,
    pub guest_name: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct Member {
    pub first_name: String,
    pub id: orator_axum::uuid::Uuid,
    pub joined_at: orator_axum::chrono::DateTime<orator_axum::chrono::Utc>,
    pub last_name: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct MemberBooking {
    pub booking_type: String,
    pub court_id: orator_axum::uuid::Uuid,
    pub date: orator_axum::chrono::NaiveDate,
    pub member_id: orator_axum::uuid::Uuid,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
#[serde(deny_unknown_fields)]
pub struct NewMember {
    pub first_name: String,
    pub last_name: String,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub enum Surface {
    #[serde(rename = "clay")]
    Clay,
    #[serde(rename = "grass")]
    Grass,
    #[serde(rename = "hard")]
    Hard,
}
#[derive(Debug, Clone, PartialEq, serde::Serialize, serde::Deserialize)]
#[serde(crate = "orator_axum::serde")]
pub struct UpdateMember {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub first_name: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub last_name: Option<String>,
}
