crates/orator-axum-codegen/tests/snapshots/codegen_axum__multipart_axum_handlers.snap
---
source: crates/orator-axum-codegen/tests/codegen_axum.rs
assertion_line: 83
expression: code
---
#![allow(dead_code, unused_imports)]
impl orator_axum::axum::response::IntoResponse
for super::operations::UploadDocumentResponse {
    fn into_response(self) -> orator_axum::axum::response::Response {
        match self {
            Self::Created(body) => {
                (orator_axum::http::StatusCode::CREATED, orator_axum::axum::Json(body))
                    .into_response()
            }
            Self::BadRequest => {
                orator_axum::http::StatusCode::BAD_REQUEST.into_response()
            }
        }
    }
}
impl<S> orator_axum::axum::extract::FromRequest<S>
for super::operations::UploadDocumentBody
where
    S: Send + Sync,
{
    type Rejection = orator_axum::axum::response::Response;
    async fn from_request(
        req: orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        state: &S,
    ) -> Result<Self, Self::Rejection> {
        let mut multipart = orator_axum::axum::extract::Multipart::from_request(
                req,
                state,
            )
            .await
            .map_err(|e| {
                use orator_axum::axum::response::IntoResponse;
                e.into_response()
            })?;
        let mut description = None;
        let mut file = None;
        while let Some(field) = multipart
            .next_field()
            .await
            .map_err(|e| {
                orator_axum::axum::response::Response::builder()
                    .status(orator_axum::http::StatusCode::BAD_REQUEST)
                    .body(orator_axum::axum::body::Body::from(e.to_string()))
                    .unwrap()
            })?
        {
            let name = field.name().unwrap_or_default().to_owned();
            match name.as_str() {
                "description" => {
                    description = Some(
                        field
                            .text()
                            .await
                            .map_err(|e| {
                                orator_axum::axum::response::Response::builder()
                                    .status(orator_axum::http::StatusCode::BAD_REQUEST)
                                    .body(orator_axum::axum::body::Body::from(e.to_string()))
                                    .unwrap()
                            })?,
                    );
                }
                "file" => {
                    file = Some(
                        field
                            .bytes()
                            .await
                            .map_err(|e| {
                                orator_axum::axum::response::Response::builder()
                                    .status(orator_axum::http::StatusCode::BAD_REQUEST)
                                    .body(orator_axum::axum::body::Body::from(e.to_string()))
                                    .unwrap()
                            })?,
                    );
                }
                _ => {}
            }
        }
        Ok(Self { description, file })
    }
}
async fn handle_upload_document<T>(
    orator_axum::axum::extract::State(
        api,
    ): orator_axum::axum::extract::State<std::sync::Arc<T>>,
    ctx: T::RequestContext,
    body: super::operations::UploadDocumentBody,
) -> Result<super::operations::UploadDocumentResponse, T::Error>
where
    T: super::operations::DefaultApi,
{
    api.upload_document(ctx, body).await
}
pub fn default_router<T>(api: std::sync::Arc<T>) -> orator_axum::axum::Router
where
    T: super::operations::DefaultApi,
    T::Error: orator_axum::axum::response::IntoResponse,
    T::RequestContext: orator_axum::axum::extract::FromRequestParts<std::sync::Arc<T>>
        + Send + 'static,
{
    orator_axum::axum::Router::new()
        .route("/upload", orator_axum::axum::routing::post(handle_upload_document::<T>))
        .with_state(api)
}
pub struct Missing;
pub struct Registered;
pub struct DefaultRouter(orator_axum::axum::Router);
impl DefaultRouter {
    pub fn new<T>(api: std::sync::Arc<T>) -> Self
    where
        T: super::operations::DefaultApi,
        T::Error: orator_axum::axum::response::IntoResponse,
        T::RequestContext: orator_axum::axum::extract::FromRequestParts<
                std::sync::Arc<T>,
            > + Send + 'static,
    {
        Self(default_router(api))
    }
    pub fn layer<L>(self, layer: L) -> Self
    where
        L: orator_axum::tower::Layer<orator_axum::axum::routing::Route> + Clone + Send
            + Sync + 'static,
        L::Service: orator_axum::tower::Service<
                orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
            > + Clone + Send + Sync + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Response: orator_axum::axum::response::IntoResponse + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Error: Into<std::convert::Infallible> + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Future: Send + 'static,
    {
        Self(self.0.layer(layer))
    }
}
pub struct ApiBuilder<DefaultState = Missing> {
    router: orator_axum::axum::Router,
    _phantom: std::marker::PhantomData<DefaultState>,
}
impl ApiBuilder {
    pub fn new() -> Self {
        Self {
            router: orator_axum::axum::Router::new(),
            _phantom: std::marker::PhantomData,
        }
    }
}
impl Default for ApiBuilder {
    fn default() -> Self {
        Self::new()
    }
}
impl ApiBuilder<Missing> {
    pub fn default(self, router: DefaultRouter) -> ApiBuilder<Registered> {
        ApiBuilder {
            router: self.router.merge(router.0),
            _phantom: std::marker::PhantomData,
        }
    }
}
impl ApiBuilder<Registered> {
    pub fn build(self) -> orator_axum::axum::Router {
        self.router
    }
}
