crates/orator-axum-codegen/tests/snapshots/codegen_axum__optional_body_axum_handlers.snap
---
source: crates/orator-axum-codegen/tests/codegen_axum.rs
expression: code
---
#![allow(dead_code, unused_imports)]
impl orator_axum::axum::response::IntoResponse
for super::operations::PatchBinaryResponse {
    fn into_response(self) -> orator_axum::axum::response::Response {
        match self {
            Self::Ok => orator_axum::http::StatusCode::OK.into_response(),
        }
    }
}
async fn handle_patch_binary<T>(
    orator_axum::axum::extract::State(
        api,
    ): orator_axum::axum::extract::State<std::sync::Arc<T>>,
    ctx: T::RequestContext,
    body: Option<orator_axum::axum::body::Bytes>,
) -> Result<super::operations::PatchBinaryResponse, T::Error>
where
    T: super::operations::DefaultApi,
{
    api.patch_binary(ctx, body).await
}
impl orator_axum::axum::response::IntoResponse for super::operations::PatchFormResponse {
    fn into_response(self) -> orator_axum::axum::response::Response {
        match self {
            Self::Ok => orator_axum::http::StatusCode::OK.into_response(),
        }
    }
}
async fn handle_patch_form<T>(
    orator_axum::axum::extract::State(
        api,
    ): orator_axum::axum::extract::State<std::sync::Arc<T>>,
    ctx: T::RequestContext,
    body: Option<orator_axum::axum::Form<super::types::Payload>>,
) -> Result<super::operations::PatchFormResponse, T::Error>
where
    T: super::operations::DefaultApi,
{
    api.patch_form(ctx, body.map(|orator_axum::axum::Form(b)| b)).await
}
impl orator_axum::axum::response::IntoResponse for super::operations::PatchJsonResponse {
    fn into_response(self) -> orator_axum::axum::response::Response {
        match self {
            Self::Ok => orator_axum::http::StatusCode::OK.into_response(),
        }
    }
}
async fn handle_patch_json<T>(
    orator_axum::axum::extract::State(
        api,
    ): orator_axum::axum::extract::State<std::sync::Arc<T>>,
    ctx: T::RequestContext,
    body: Option<orator_axum::axum::Json<super::types::Payload>>,
) -> Result<super::operations::PatchJsonResponse, T::Error>
where
    T: super::operations::DefaultApi,
{
    api.patch_json(ctx, body.map(|orator_axum::axum::Json(b)| b)).await
}
impl orator_axum::axum::response::IntoResponse for super::operations::PatchTextResponse {
    fn into_response(self) -> orator_axum::axum::response::Response {
        match self {
            Self::Ok => orator_axum::http::StatusCode::OK.into_response(),
        }
    }
}
async fn handle_patch_text<T>(
    orator_axum::axum::extract::State(
        api,
    ): orator_axum::axum::extract::State<std::sync::Arc<T>>,
    ctx: T::RequestContext,
    body: Option<String>,
) -> Result<super::operations::PatchTextResponse, T::Error>
where
    T: super::operations::DefaultApi,
{
    api.patch_text(ctx, body).await
}
pub fn default_router<T>(api: std::sync::Arc<T>) -> orator_axum::axum::Router
where
    T: super::operations::DefaultApi,
    T::Error: orator_axum::axum::response::IntoResponse,
    T::RequestContext: orator_axum::axum::extract::FromRequestParts<std::sync::Arc<T>>
        + Send + 'static,
{
    orator_axum::axum::Router::new()
        .route("/binary", orator_axum::axum::routing::patch(handle_patch_binary::<T>))
        .route("/form", orator_axum::axum::routing::patch(handle_patch_form::<T>))
        .route("/json", orator_axum::axum::routing::patch(handle_patch_json::<T>))
        .route("/text", orator_axum::axum::routing::patch(handle_patch_text::<T>))
        .with_state(api)
}
pub struct Missing;
pub struct Registered;
pub struct DefaultRouter(orator_axum::axum::Router);
impl DefaultRouter {
    pub fn new<T>(api: std::sync::Arc<T>) -> Self
    where
        T: super::operations::DefaultApi,
        T::Error: orator_axum::axum::response::IntoResponse,
        T::RequestContext: orator_axum::axum::extract::FromRequestParts<
                std::sync::Arc<T>,
            > + Send + 'static,
    {
        Self(default_router(api))
    }
    pub fn layer<L>(self, layer: L) -> Self
    where
        L: orator_axum::tower::Layer<orator_axum::axum::routing::Route> + Clone + Send
            + Sync + 'static,
        L::Service: orator_axum::tower::Service<
                orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
            > + Clone + Send + Sync + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Response: orator_axum::axum::response::IntoResponse + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Error: Into<std::convert::Infallible> + 'static,
        <L::Service as orator_axum::tower::Service<
            orator_axum::axum::http::Request<orator_axum::axum::body::Body>,
        >>::Future: Send + 'static,
    {
        Self(self.0.layer(layer))
    }
}
pub struct ApiBuilder<DefaultState = Missing> {
    router: orator_axum::axum::Router,
    _phantom: std::marker::PhantomData<DefaultState>,
}
impl ApiBuilder {
    pub fn new() -> Self {
        Self {
            router: orator_axum::axum::Router::new(),
            _phantom: std::marker::PhantomData,
        }
    }
}
impl ApiBuilder<Missing> {
    pub fn default(self, router: DefaultRouter) -> ApiBuilder<Registered> {
        ApiBuilder {
            router: self.router.merge(router.0),
            _phantom: std::marker::PhantomData,
        }
    }
}
impl ApiBuilder<Registered> {
    pub fn build(self) -> orator_axum::axum::Router {
        self.router
    }
}
